--- a/Books.Api/Books.Api.csproj
+++ b/Books.Api/Books.Api.csproj
@@ -12,9 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Books.Common\Books.Common.csproj" />
+    <ProjectReference Include="..\Books.Data\Books.Data.csproj" />
     <ProjectReference Include="..\Books.Entities\Books.Entities.csproj" />
-    <ProjectReference Include="..\Books.Legacy\Books.Legacy.csproj" />
-    <ProjectReference Include="..\Books.Models\Books.Models.csproj" />
   </ItemGroup>
 
 </Project>
